@@ -20,6 +20,8 @@ RapiConnection* rapi_connection_from_name(const char* device_name)
   RapiConnection* result = rapi_connection_from_info(info);
   if (result)
     result->owned_info = info;
+  else
+    synce_info_destroy(info);
 
   return result;
 }
@@ -64,5 +66,141 @@ void rapi_connection_destroy(RapiConnection* connection)
     synce_info_destroy(connection->owned_info);
     free(connection);
   }
+}
+
+
+const char *
+rapi_connection_get_name(RapiConnection* connection)
+{
+  RapiContext *context = NULL;
+  if (connection)
+    context = connection->context;
+  else
+    context = rapi_context_current();
+
+  if (context)
+    return synce_info_get_name(context->info);
+
+  return NULL;
+}
+
+bool
+rapi_connection_get_os_version(RapiConnection* connection, int *os_major, int *os_minor)
+{
+  RapiContext *context = NULL;
+  if (connection)
+    context = connection->context;
+  else
+    context = rapi_context_current();
+
+  if (context)
+    return synce_info_get_os_version(context->info, os_major, os_minor);
+
+  return false;
+}
+
+int
+rapi_connection_get_build_number(RapiConnection* connection)
+{
+  RapiContext *context = NULL;
+  if (connection)
+    context = connection->context;
+  else
+    context = rapi_context_current();
+
+  if (context)
+    return synce_info_get_build_number(context->info);
+
+  return 0;
+}
+
+int
+rapi_connection_get_processor_type(RapiConnection* connection)
+{
+  RapiContext *context = NULL;
+  if (connection)
+    context = connection->context;
+  else
+    context = rapi_context_current();
+
+  if (context)
+    return synce_info_get_processor_type(context->info);
+
+  return 0;
+}
+
+const char *
+rapi_connection_get_os_name(RapiConnection* connection)
+{
+  RapiContext *context = NULL;
+  if (connection)
+    context = connection->context;
+  else
+    context = rapi_context_current();
+
+  if (context)
+    return synce_info_get_os_name(context->info);
+
+  return NULL;
+}
+
+const char *
+rapi_connection_get_model(RapiConnection* connection)
+{
+  RapiContext *context = NULL;
+  if (connection)
+    context = connection->context;
+  else
+    context = rapi_context_current();
+
+  if (context)
+    return synce_info_get_model(context->info);
+
+  return NULL;
+}
+
+const char *
+rapi_connection_get_device_ip(RapiConnection* connection)
+{
+  RapiContext *context = NULL;
+  if (connection)
+    context = connection->context;
+  else
+    context = rapi_context_current();
+
+  if (context)
+    return synce_info_get_device_ip(context->info);
+
+  return NULL;
+}
+
+const char *
+rapi_connection_get_local_ip(RapiConnection* connection)
+{
+  RapiContext *context = NULL;
+  if (connection)
+    context = connection->context;
+  else
+    context = rapi_context_current();
+
+  if (context)
+    return synce_info_get_local_ip(context->info);
+
+  return NULL;
+}
+
+int
+rapi_connection_get_fd(RapiConnection* connection)
+{
+  RapiContext *context = NULL;
+  if (connection)
+    context = connection->context;
+  else
+    context = rapi_context_current();
+
+  if (context)
+    return synce_info_get_fd(context->info);
+
+  return 0;
 }
 
