@@ -15,10 +15,10 @@ typedef struct _RapiContext
 	uint32_t result_1;
 	uint32_t result_2;
 	uint32_t last_error;
-    uint32_t rapi_error;
+	uint32_t rapi_error;
 	bool is_initialized;
-    SynceInfo* info;
-    struct rapi_ops_s *rapi_ops;
+	SynceInfo* info;
+	struct rapi_ops_s *rapi_ops;
 } RapiContext;
 
 /**
